Bugfix image children text color in dark mode

--- a/src/component/image.scss
+++ b/src/component/image.scss
@@ -107,3 +107,13 @@
     }
   }
 }
+
+body.dark {
+  .img {
+    &.light {
+      & > .inner > .children {
+        color: $color-text-light-1;
+      }
+    }
+  }
+}
